win32-loader (0.6.0~pre2) UNRELEASED; urgency=low

  * Add reference to /usr/share/common-licenses.
    - debian/copyright
    - debian/control (Depends): Add base-files (>= 4.0.1).
  * Updated Italian (it.po) by Stefano Canepa
  * Added Catalan (ca.po) by myself
  * Put debian-boot as Maintainer, and myself in Uploaders.
  * Support for using a different charset in NTLDR.  Defaults to cp437,
    which works for languages with latin charset.  Other translations
    will need to change this setting in their respective PO files.
    (Closes: #440471)
  * Misc fixes in l10n infrastructure that will enable build on any system
    where locales-all (added to Build-Depends) is installed, no matter the
    locale setup.  (Closes: #441193)

 -- Robert Millan <rmh@aybabtu.com>  Fri,  7 Sep 2007 23:43:18 +0200

win32-loader (0.6.0~pre1) unstable; urgency=low

  * Initial release (Closes: #425038).

 -- Robert Millan <rmh@debian.org>  Tue, 28 Aug 2007 23:14:19 +0200
