@@ -13,8 +13,10 @@ win32-loader (0.6.0~pre2) UNRELEASED; urgency=low
   * Misc fixes in l10n infrastructure that will enable build on any system
     where locales-all (added to Build-Depends) is installed, no matter the
     locale setup.  (Closes: #441193)
+  * Get rid of hardcoded language lists in main.nsi.  All this cruft is
+    now generated dynamicaly by l10n/Makefile (based on $(LINGUAS)).
 
- -- Robert Millan <rmh@aybabtu.com>  Fri,  7 Sep 2007 23:43:18 +0200
+ -- Robert Millan <rmh@aybabtu.com>  Sun,  9 Sep 2007 00:16:36 +0200
 
 win32-loader (0.6.0~pre1) unstable; urgency=low
 
